# pyapi-test

./: .dockerignore  .gitignore  Dockerfile  README.md  Rakefile  docker-compose.yaml  pip-freeze-3.11.txt  pyproject.toml
apps/flask/: app.py  run.py  wsgi.py
docker-files/app/: .bashrc
docker-files/etc/: motd
docker-files/etc/nginx/: nginx-epoll.conf  nginx.conf
docker-files/etc/nginx/sites-available/: default
docker-files/etc/supervisor/: supervisord.conf
docker-files/etc/supervisor/conf.d/: nginx-epoll.conf  nginx.conf  uwsgi.conf
docker-files/etc/uwsgi-emperor/: emperor.ini
docker-files/etc/uwsgi-emperor/vassals/: uwsgi-flask.ini
docker-files/etc/uwsgi/apps-available/: uwsgi_flask.ini
pyapi/: pyproject.toml
pyapi/flask/: api.py  app.py  blueprints.py  log.py
pyapi/testing/: base.py  config.py
rakelib/: common.rake  docker.rake  git.rake  pkg.rake  venv.rake
tests/flask/: test_api.py  test_app.py  test_decorators.py  test_log.py  test_profiler.py
tests/testing/: test_base.py  test_contexts.py  test_fixtures.py
