# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyapi"
description = "Python API frameworks libraries & utilities"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "Flask",
    "PyYAML",
    "fastapi",
    "gunicorn",
    "httpx",
    "locust",
    "requests>2",
    "tornado",
    "uvicorn",
    "uwsgi",
    "uwsgitop",
]

[project.optional-dependencies]
dev = [
    "pytest", 
    "pytest-cov", 
    "flake8",
    "twine",
]

[tool.setuptools]
packages = [
    "pyapi",
    "pyapi.flask",
    "pyapi.testing"
]

script-files = [
    "bin/launch-supervisor-uwsgi",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
pyapi = [
    "VERSION",
    "static/*.css",
    "static/*.ico",
    "static/*.js",
    "static/*.png",
]

[tool.coverage.report]
skip_empty = true  # exclude empty __init__.py files from report
show_missing = true  # include missing lines in coverage report
